background image modified

--- a/public/styles.css
+++ b/public/styles.css
@@ -32941,6 +32941,10 @@ html {
   scroll-behavior: smooth;
 }
 
+body{
+  background-image: url("./img/bg-black.svg");
+}
+
 @media screen and (prefers-reduced-motion: reduce) {
   html {
     scroll-behavior: auto;
