--- a/public/styles.css
+++ b/public/styles.css
@@ -32941,8 +32941,8 @@ html {
   scroll-behavior: smooth;
 }
 
-body{
-  background-image: url("./img/bg-black.svg");
+.backgroundimg{
+  background-image: url("img/bg-black.svg");
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
