--- a/public/styles.css
+++ b/public/styles.css
@@ -32821,26 +32821,57 @@ video {
 
 .link{
   font-weight: 700;
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
   margin-left: 2.75rem;
   text-align: center;
   letter-spacing: 0.05em;
 }
 
+@media (min-width: 768px){
+  .link{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
 .paragraph{
   font-weight: 700;
   height: auto;
-  width: 24rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  margin-right: 0.25rem;
+  margin-top: 2rem;
+  margin-left: 3.5rem;
+  letter-spacing: 0.025em;
+  width: auto;
+}
+
+@media (min-width: 768px){
+  .paragraph{
+    font-size: 1.5rem;
+    line-height: 2rem;
+    margin-left: 9rem;
+    width: 24rem;
+  }
 }
 
 .title{
   font-weight: 700;
   font-size: 1.875rem;
   line-height: 2.25rem;
+  margin-left: 3.5rem;
+  margin-top: 5rem;
   --tw-text-opacity: 1;
   color: rgba(255, 46, 0, var(--tw-text-opacity));
   text-transform: uppercase;
+  letter-spacing: 0.05em;
+}
+
+@media (min-width: 768px){
+  .title{
+    margin-left: 9rem;
+  }
 }
 
 .img-gray{
@@ -32848,8 +32879,6 @@ video {
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
   border-radius: 0.375rem;
   height: 12rem;
-  margin-top: 3.5rem;
-  margin-right: 9rem;
   position: relative;
   width: 18rem;
 }
@@ -32857,6 +32886,8 @@ video {
 @media (min-width: 768px){
   .img-gray{
     height: 23rem;
+    margin-top: 3.5rem;
+    margin-right: 9rem;
     width: 35rem;
   }
 }
@@ -32876,7 +32907,7 @@ video {
   align-items: center;
   justify-content: space-evenly;
   margin-top: 3.5rem;
-  width: 23.5rem;
+  width: auto;
 }
 
 @media (min-width: 768px){
