--- a/src/styles.css
+++ b/src/styles.css
@@ -22,10 +22,10 @@
     @apply flex flex-row items-center justify-evenly mt-14 w-auto md:w-700;
 }
 .labels{
-    @apply tracking-wide block mb-4 font-bold uppercase text-xl md:text-2xl text-gray-300;
+    @apply tracking-wide block mb-4 font-bold uppercase text-xl md:text-2xl text-white;
 }
 .box{
-    @apply w-60 md:w-500 h-14 rounded border-2 border-white bg-transparent focus:border-secondary-200 outline-none p-4;
+    @apply w-60 md:w-500 h-14 rounded border-2 border-white bg-transparent focus:border-secondary-300 outline-none p-4;
 }
 .links:hover{
     text-decoration-color:  #FF2E00!important;
@@ -38,6 +38,15 @@ html {
 .backgroundimg{
     background-image: url("img/bg-black.svg");
     
+}
+.backgroundimgCurved {
+    background-image: url("img/backgroundCurves.svg");
+}
+.backgroundTopCurved {
+    background-image: url("img/backgroundTopCurved.svg");
+}
+.heroImg {
+    background-image: url("img/hero.svg");
 }
 @media screen and (prefers-reduced-motion: reduce) {
 	html {
