--- a/public/styles.css
+++ b/public/styles.css
@@ -33075,6 +33075,9 @@ video {
   align-items: center;
   align-content: center;
   justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 80rem;
 }
 
 .icon{
@@ -33088,7 +33091,7 @@ video {
 @media (min-width: 768px){
   .icon{
     margin-top: 3.5rem;
-    width: 47rem;
+    width: auto;
   }
 }
 
@@ -33102,6 +33105,13 @@ video {
   color: rgba(255, 255, 255, var(--tw-text-opacity));
   text-transform: uppercase;
   letter-spacing: 0.025em;
+}
+
+@media (min-width: 640px){
+  .labels{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
 }
 
 @media (min-width: 768px){
@@ -33148,8 +33158,12 @@ html {
   scroll-behavior: smooth;
 }
 
+body{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .backgroundimg{
-  background-image: url("img/bg-black.svg");
+  background-color: #000000;
 }
 
 .backgroundimgCurved {
@@ -33157,11 +33171,16 @@ html {
 }
 
 .backgroundTopCurved {
-  background-image: url("img/backgroundTopCurved.svg");
+  background-image: url("img/img.svg");
+  background-attachment: fixed;
 }
 
 .heroImg {
   background-image: url("img/hero.svg");
+}
+
+.link-undeline{
+  background-image:linear-gradient(0deg,rgb(214, 85, 46) 0,rgba(255, 180, 170, 0.4) 30%,transparent 40%,transparent);
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
