--- a/src/styles.css
+++ b/src/styles.css
@@ -16,13 +16,13 @@
     @apply bg-white w-72 h-48 md:w-600 md:h-400 rounded-md md:mr-36 md:mt-14 relative ;
 }
 .proj{
-    @apply  flex flex-row content-center justify-between items-center flex-wrap;
+    @apply  flex flex-row content-center justify-between items-center flex-wrap mx-auto max-w-7xl;
 }
 .icon{
-    @apply flex flex-row items-center justify-evenly mt-2 md:mt-14 md:w-700;
+    @apply flex flex-row items-center justify-evenly mt-2 md:mt-14 md:w-auto;
 }
 .labels{
-    @apply tracking-wide block mb-4 font-bold uppercase text-xl md:text-2xl text-white;
+    @apply tracking-wide block mb-4 font-bold uppercase text-xl md:text-2xl sm:text-sm text-white;
 }
 .box{
     @apply w-60 md:w-500 h-14 rounded border-2 border-white bg-transparent focus:border-secondary-300 outline-none p-4;
@@ -35,18 +35,27 @@
 html {
 	scroll-behavior: smooth;
 }
+body{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 .backgroundimg{
-    background-image: url("img/bg-black.svg");
+    background-color: #000000;
     
 }
 .backgroundimgCurved {
     background-image: url("img/backgroundCurves.svg");
 }
 .backgroundTopCurved {
-    background-image: url("img/backgroundTopCurved.svg");
+    background-image: url("img/img.svg");
+    background-attachment: fixed;
+
 }
 .heroImg {
     background-image: url("img/hero.svg");
+}
+.link-undeline{
+   background-image:linear-gradient(0deg,rgb(214, 85, 46) 0,rgba(255, 180, 170, 0.4) 30%,transparent 40%,transparent);
+
 }
 @media screen and (prefers-reduced-motion: reduce) {
 	html {
