--- a/src/styles.css
+++ b/src/styles.css
@@ -47,7 +47,13 @@ body {
 nav {
   background-color: #687871;
 }
-.introduction {
+.index {
+  background-image: url("img/separator.png");
+  background-repeat: repeat-x;
+  height: 10px;
+  border: 0;
+  display: block;
+  z-index: 100000;
 }
 .backgroundimg {
   background-image: url("img/bg-black.svg");
