--- a/public/styles.css
+++ b/public/styles.css
@@ -32797,8 +32797,8 @@ video {
 }
 
 .links:hover {
-  -webkit-text-decoration-color: #ff2e00 !important;
-          text-decoration-color: #ff2e00 !important;
+  -webkit-text-decoration-color: #e85d04 !important;
+          text-decoration-color: #e85d04 !important;
   text-decoration: underline;
 }
 
@@ -32853,7 +32853,6 @@ body {
     "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #03071e;
   color: #fffffa;
-  opacity: 78%;
 }
 
 .index {
