--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@
 }
 
 .links:hover {
-  text-decoration-color: #ff2e00 !important;
+  text-decoration-color: #e85d04 !important;
   text-decoration: underline;
 }
 .introduction {
@@ -43,7 +43,6 @@ body {
     "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #03071e;
   color: #fffffa;
-  opacity: 78%;
 }
 .index {
   background-image: url("img/separator.png");
