--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,7 @@
   @apply flex flex-row items-center justify-evenly mt-2 md:mt-14 md:w-auto;
 }
 .labels {
-  @apply tracking-wide block mb-4 font-bold uppercase text-xl md:text-2xl sm:text-sm text-white;
+  @apply tracking-wide block mb-4 font-bold uppercase text-xl md:text-2xl sm:text-sm;
 }
 
 .links:hover {
@@ -30,7 +30,7 @@
   text-decoration: underline;
 }
 .introduction {
-  @apply w-96 text-xl text-primary leading-10 ml-4 md:w-600 md:text-2xl lg:w-700 lg:text-3xl;
+  @apply w-96 text-xl leading-10 ml-4 md:w-600 md:text-2xl lg:w-700 lg:text-3xl;
 }
 .skill {
   @apply w-auto font-bold text-xl md:text-2xl mt-2 tracking-wide;
@@ -42,7 +42,7 @@ body {
   font-family: "Playfair Display", serif, Roboto, Oxygen, Ubuntu, Cantarell,
     "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #03071e;
-  color: #fffffa;
+  color: #ffffff;
 }
 .index {
   background-image: url("img/separator.png");
